Fixes: NB#258981 - Long dialogs with buttonbox are shifted outside the screen border. RevBy: Adrian Yanes

--- a/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
@@ -1,34 +1,34 @@
 
 /* MDialogStyle : MSceneWindowStyle */
 MDialogStyle {
-    margin-left: 0;
-    margin-top: 0;
-    margin-right: 0;
+    margin-left:   0;
+    margin-top:    0;
+    margin-right:  0;
     margin-bottom: 0;
 
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
+    padding-left:   0;
+    padding-right:  0;
+    padding-top:    $DIALOG_TOP_PADDING;
     padding-bottom: 0;
 
-    vertical-align: center;
+    vertical-align:   center;
     horizontal-align: center;
 
-    minimum-size: 100% 100%;
-    preferred-size: 100% 100%;
-    maximum-size: 100% 100%;
+    minimum-size:   100% -1;
+    preferred-size: 100% -1;
+    maximum-size:   100% 100%;
 
     vertical-spacing: 0;
     button-spacing: 0;
 
-    title-bar-height: 5.7mm;
+    title-bar-height: 57px;
     title-bar-alignment: top;
     title-capitalization: false;
 
     /* supports only "bottom" or "center" */
     dialog-vertical-alignment: center;
 
-    dialog-top-margin: 3.5mm;
+    dialog-top-margin: 0;
     dialog-bottom-margin: 0;
     dialog-left-margin: 0;
     dialog-right-margin: 0;
@@ -48,31 +48,31 @@ MDialogStyle {
     maximum-horizontal-buttons: 3;
 
     contents-viewport-style-name: "MDialogContentsViewport";
-    button-box-style-name: "MDialogButtonBox";
-    title-bar-style-name: "MDialogTitleBar";
-    title-label-style-name: "CommonDialogHeader";
+    button-box-style-name:        "MDialogButtonBox";
+    title-bar-style-name:         "MDialogTitleBar";
+    title-label-style-name:       "CommonDialogHeader";
 
     /* This is a hack to avoid the animation starting from the corner. This should become obsolete eventually. */
-    padding-left: 160px;
+    padding-left:  160px;
     padding-right: 160px;
 }
 
 MDialogStyle.Portrait {
-    dialog-minimum-size: 448px 137px;
+    dialog-minimum-size:   448px 137px;
     dialog-preferred-size: 448px -1;
     maximum-horizontal-buttons: 1;
     button-spacing: $MARGIN_DEFAULT;
 
     /* This is a hack to avoid the animation starting from the corner. This should become obsolete eventually. */
-    padding-left:   16px;
-    padding-right:  16px;
+    padding-left:  16px;
+    padding-right: 16px;
 }
 
 #MDialogContentsViewport {
     /* 5 * SIZE_BUTTON */
-    minimum-size:   544px -1;
-    preferred-size: 544px -1;
-    maximum-size:   100% 260px;
+    minimum-size:   -1 -1;
+    preferred-size: -1 -1;
+    maximum-size: -1 260px;
 
     margin-left:    0;
     margin-top:     0;
@@ -90,9 +90,9 @@ MDialogStyle.Portrait {
 
 #MDialogContentsViewport.Portrait {
     /* 10 * SIZE_BUTTON */
-    minimum-size:   448px -1;
-    preferred-size: 448px -1;
-    maximum-size:   100% 640px;
+    minimum-size:   -1 -1;
+    preferred-size: -1 -1;
+    maximum-size: -1 640px;
 }
 
 MPannableWidgetStyle[titlebarless]#MDialogContentsViewport {
@@ -141,17 +141,10 @@ MPannableWidgetStyle[titlebarless]#MDialogContentsViewport {
     maximum-size: -1 57px;
 }
 
-#MDialogBox {
-    color: $COLOR_INVERTED_FOREGROUND;
-    minimum-size: 54.4mm 8mm;
-    preferred-size: 54.4mm 8mm;
-    maximum-size: 54.4mm 8mm;
-}
-
 #MDialogButtonBox {
     minimum-size: -1 -1;
     preferred-size: -1 -1;
-    maximum-size: -1 80px;
+    maximum-size: -1 -1;
 
     background-image: none;
     margin-left: 0;
